--- a/style.css
+++ b/style.css
@@ -4,17 +4,40 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+/* header */
 header {
     background-color: #2E3A46;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     /* debug */
     height: 80px;
 }
+.filtra {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: rgb(151, 151, 151);
+    font-weight: 500;
+    padding-right: 1rem;
+}
+#generi {
+    border: 2px solid rgb(49, 49, 49);
+    border-radius: 7px;
+    background-color: #2E3A46;
+    box-shadow: 1px 2px 2px rgb(49, 49, 49);
+    color: white;
+    font-weight: 600;
+    padding: 0.5rem;
+}
+
+
+/* main */
 main {
     background-color: #1E2D3B;
     /* debug */
     height: calc(100% - 80px);
+    min-height: calc(100vh - 80px);
 }
 .logo {
     color: #1ED760;
