--- a/style.css
+++ b/style.css
@@ -13,22 +13,26 @@ header {
     /* debug */
     height: 80px;
 }
-.filtra {
+.filtra,
+.ordina {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     color: rgb(151, 151, 151);
     font-weight: 500;
     padding-right: 1rem;
+    text-align: center;
 }
-#generi {
+#generi,
+#ordina {
     border: 2px solid rgb(49, 49, 49);
     border-radius: 7px;
     background-color: #2E3A46;
     box-shadow: 1px 2px 2px rgb(49, 49, 49);
-    color: white;
+    color: rgb(151, 151, 151);
     font-weight: 600;
     padding: 0.5rem;
+    margin: 0.5rem
 }
 
 
